--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ logo: /img/jkan.png
 jkan_theme: Default
 
 # Authentication
-github_client_id: 
-gatekeeper_host: 
+github_client_id: 5cd57e12e2f7a0402142
+gatekeeper_host: https://cico-test-app.herokuapp.com
 
 # Dataset schema
 schema: default
